--- a/settings.properties
+++ b/settings.properties
@@ -1,5 +1,6 @@
-#Wed Sep 16 21:15:18 ICT 2015
+#Fri Jul 22 23:16:48 ICT 2016
 defaultPassword=20021992
-defaultUsername=bvb1992
-maxTask=10
 types=Modern, Classic
+maxTask=10
+defaultUsername=bvb1992
+autoSubmission=true
